--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -99,9 +99,7 @@
 </ion-grid>
 </ion-card>
 
-
-  <ion-card style="border-radius: 30px;" class="radius" [scrolly]="false"> pengumuman <br>
-    
+  <ion-card style="border-radius: 30px;" class="radius" [scrolly]="false"> 
     <swiper [config]="swiperConfig" [autoplay]="{delay: 1000,disableOnInteraction: false}">
 
       <ng-template swiperSlide>
@@ -114,10 +112,6 @@
           <img src="/assets/image/sl-319.jpg"> 
         </div>
       </ng-template>
-      <ng-template swiperSlide><div class="slide-container">
-        <img src="/assets/image/sl-320.jpg"> 
-      </div>
-    </ng-template>
     </swiper>
 </ion-card>
 
